--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 	padding-bottom: 10px;
 	margin-left: 5%;
 	margin-right: 0;
-	font-family: amontilladios;
+	font-family: 'Yesteryear', cursive;
 	font-size: 85px;
 	color: white;
 	background-position: center;
