--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,12 @@ body {
 
 .headertext {
 	margin: auto;
+	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-left: 5%;
 	margin-right: 0;
 	font-family: 'Yesteryear', cursive;
-	font-size: 85px;
+	font-size: 50px;
 	color: white;
 	background-position: center;
 }
@@ -164,11 +165,12 @@ body {
 
 	.headertext {
 		margin: auto;
-		padding-bottom: 10px;
 		margin-left: 5%;
 		margin-right: 0;
-		font-family: amontilladios;
-		font-size: 85px;
+		padding-top: 20px;
+		padding-bottom: 0;
+		font-family: 'Yesteryear', cursive;
+		font-size: 65px;
 		color: white;
 		background-position: center;
 	}
